--- a/LostAndFound.Web/Views/Home/Index.cshtml
+++ b/LostAndFound.Web/Views/Home/Index.cshtml
@@ -1,31 +1,39 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿@model LostAndFound.Web.Models.ListLostReportItemVM
+
+@{
+    ViewBag.Title = "Lost And Found";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<h2>Found Items</h2>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+
+<div class="table-responsive">
+    <table class="table table-bordered table-condensed table-striped table-hover sortable">
+        @if (Model.LostItems.Count() == 0)
+        {
+            <tr>
+                <td colspan="10">No Record's found.</td>
+            </tr>
+        }
+        else
+        {
+            <thead>
+                <tr class="danger">
+                    <th data-defaultsign="month">Date Lost</th>
+                    <th data-defaultsign="AZ">Item Type</th>
+                    <th data-defaultsign="AZ">Item Name</th>
+                    <th data-defaultsign="AZ">Location</th>                 
+                </tr>
+            </thead>
+            foreach (var item in Model.LostItems)
+            {
+                <tr>
+                    <td>@item.DateLost</td>
+                    <td>@item.ItemType</td>
+                    <td>@item.ItemName</td>  
+                    <td>@item.Location</td>                  
+                </tr>
+            }
+        }
+    </table>
+</div>  
