-authentication added - login added - close case action added, view is missing

--- a/LostAndFound.Web/Views/Shared/_Layout.cshtml
+++ b/LostAndFound.Web/Views/Shared/_Layout.cshtml
@@ -21,7 +21,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">                 
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Lost Items", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Report Lost Item", "ReportLostItem", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
