--- a/LostAndFound.Web/Views/Home/Index.cshtml
+++ b/LostAndFound.Web/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Lost And Found";
 }
 
-<h2>Found Items</h2>
+<h2>Lost Items</h2>
 
 
 <div class="table-responsive">
@@ -28,7 +28,7 @@
             foreach (var item in Model.LostItems)
             {
                 <tr>
-                    <td>@item.DateLost</td>
+                    <td>@item.DateLost.ToShortDateString()</td>
                     <td>@item.ItemType</td>
                     <td>@item.ItemName</td>  
                     <td>@item.Location</td>                  
