-- edit case is added -- close case is added -- view case is added -- fixed html5 date format -- User edit password is not impemented yet

--- a/LostAndFound.Web/Views/Shared/_LoginPartial.cshtml
+++ b/LostAndFound.Web/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
 
     <ul class="nav navbar-nav navbar-right">
         <li>
-           Hello  @User.Identity.GetUserName() 
+           <a href='@Url.Action("EditAccount", "Home")'> Hello  @User.Identity.GetUserName() </a>
         </li>
         <li>@Html.ActionLink("Claim items","Claim","Home")</li>
         <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
